# coffee-dependency-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  main.py  pyproject.toml
coffee_dependency_tracker/: __init__.py  __main__.py  _build_backend.py  cli.py  models.py  stats.py  storage.py
tests/: test_cli.py  test_cli_appname.py  test_cli_help.py  test_cli_helpers.py  test_cli_parser.py  test_defaults.py  test_models.py  test_readme.py  test_stats.py  test_storage.py  test_validation.py  test_version.py
